--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <repositories>
 		<repository>
@@ -29,18 +30,18 @@
     <dependency>
       <groupId>com.opencsv</groupId>
       <artifactId>opencsv</artifactId>
-      <version>5.4</version>
+      <version>5.5.1</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>tech.tablesaw</groupId>
       <artifactId>tablesaw-core</artifactId>
-      <version>0.38.2</version>
+      <version>0.38.3</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.10</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -49,7 +50,7 @@
       <dependency>
         <groupId>org.json</groupId>
         <artifactId>json</artifactId>
-        <version>20160212</version>
+        <version>20210307</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
@@ -64,35 +65,17 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>28.2-jre</version>
+        <version>30.1.1-jre</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.7.30</version>
+        <version>2.0.0-alpha2</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
   <plugins>
-    <plugin>
-      <!-- Build an executable JAR -->
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-jar-plugin</artifactId>
-      <version>3.2.0</version>
-      <configuration>
-        <archive>
-          <manifest>
-            <addClasspath>true</addClasspath>
-            <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>br.unicamp.multimodal_ai.cogtom_cst.Main</mainClass>
-          </manifest>
-        </archive>
-        <includes>
-            <include>input/*</include>
-          </includes>
-      </configuration>
-    </plugin>
     <plugin>
       <artifactId>maven-assembly-plugin</artifactId>
       <configuration>
