--- a/pom.xml
+++ b/pom.xml
@@ -23,17 +23,6 @@
 	    <version>0.6.1</version>
 	  </dependency>
     <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.opencsv</groupId>
-      <artifactId>opencsv</artifactId>
-      <version>5.5.1</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
       <groupId>tech.tablesaw</groupId>
       <artifactId>tablesaw-core</artifactId>
       <version>0.38.3</version>
@@ -76,6 +65,10 @@
   </dependencyManagement>
   <build>
   <plugins>
+    <plugin>
+      <artifactId>maven-dependency-plugin</artifactId>
+      <version>3.1.2</version>
+    </plugin>
     <plugin>
       <artifactId>maven-assembly-plugin</artifactId>
       <configuration>
