--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
       <version>0.38.3</version>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.4.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -65,6 +65,21 @@
   </dependencyManagement>
   <build>
   <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <redirectTestOutputToFile>true</redirectTestOutputToFile>
+        </configuration>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>5.3.2</version>
+            </dependency>
+        </dependencies>
+    </plugin>
     <plugin>
       <artifactId>maven-dependency-plugin</artifactId>
       <version>3.1.2</version>
@@ -89,18 +104,6 @@
           <phase>package</phase>                                                          
         </execution>
       </executions>
-    </plugin>
-  <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-surefire-plugin</artifactId>
-    <version>3.0.0-M5</version>
-    <dependencies>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.5.2</version>
-      </dependency>
-    </dependencies>
     </plugin>
   </plugins>
   </build>
