--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
       <version>5.4.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>exec-maven-plugin</artifactId>
+      <version>3.0.0</version>
+    </dependency>
   </dependencies>
   <dependencyManagement>
     <dependencies>
