--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,11 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+# Ignore changes to main resources folder
+src/main/resources/affordances.csv
+src/main/resources/entities.csv
+src/main/resources/eye_directions.csv
+src/main/resources/intentions.csv
+src/main/resources/positioning.csv
+src/main/resources/scenes.csv
