--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-surefire-plugin</artifactId>
       <version>3.0.0-M5</version>
+      <configuration>
+        <redirectTestOutputToFile>true</redirectTestOutputToFile>
+        <reportsDirectory>${basedir}/reports/</reportsDirectory>
+      </configuration>
       <dependencies>
         <dependency>
           <groupId>org.junit.jupiter</groupId>
